# pd-som

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
Sources/: som.c
som/: som-help.pd
som/data/: trained-model.txt
